courses/ciss240/latex/main.py.err
  File "<stdin>", line 2
    print consolegrid(numrows=5)
                    ^
SyntaxError: invalid syntax
